implementadas todas las tablas finalmente, total de tablas en postgreSQL 29